examples/test/testpolicy19781.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19781
  namespace: namespace464
spec:
  podSelector:
    matchLabels:
      key44: value7
      key10: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value1
          key41: value43
          key39: value30
      podSelector:
        matchLabels:
          key27: value6
          key19: value17
